# fpy

./: .env.example  .gitignore  README.md  pyproject.toml
.superpowers/sdd/: task-4-report.md  task-5-report.md  task-6-report.md
evaluation/: __init__.py  build_scenarios.py  scenarios.jsonl
scripts/: evaluate_elicitation.py
src/forecasting_assistant/: config.py
src/forecasting_assistant/application/: clarification.py  normalization.py  orchestrator.py  state_reducer.py  validation.py
src/forecasting_assistant/domain/: conditions.py  models.py  schema.py
src/forecasting_assistant/infrastructure/llm/: openai_responses.py  protocol.py
src/forecasting_assistant/infrastructure/persistence/: protocol.py  sqlite_repository.py
src/forecasting_assistant/interfaces/: __init__.py  cli.py
src/forecasting_assistant/prompts/: extractor.py  llmrei_long.py
tests/: fakes.py
tests/integration/: test_cli.py  test_elicitation_flow.py
tests/unit/: test_clarification.py  test_conditions.py  test_config.py  test_domain_models.py  test_evaluation_dataset.py  test_evaluation_metrics.py  test_extractor_prompt.py  test_openai_adapter.py  test_question_policy.py  test_schema.py  test_sqlite_repository.py  test_state_reducer.py  test_validation.py
