[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "forecasting-requirement-elicitation"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "openai>=2,<3",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "typer>=0.15,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14,<2",
  "pytest>=8,<10",
  "pytest-asyncio>=0.25,<2",
  "ruff>=0.9,<1",
]

[project.scripts]
forecast-elicitation = "forecasting_assistant.interfaces.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["forecasting_assistant"]
